consul-infra/consulcontrolplane/consul-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom-ui-ingress
  namespace: consul
  # annotations:
  #   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - monitor.maniak.lab
  rules:
    - host: monitor.maniak.lab
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80
